// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`alert > renders correctly small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="small styles__1b838gx0 styles_sentiment_danger__1b838gx1 styles_size_small__1b838gx7 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__1b838gx8 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
          style="--_4k0ekn3: 1 1 auto;"
        >
          <svg
            aria-hidden="true"
            class="styles__1b838gxd uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzg uv_icons_1sbwqkz1k"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="styles__1b838gx9 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_0.25rem_xxsmall__toi52u5j"
            style="--_4k0ekn3: 1 1 auto;"
          >
            <span
              class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_bodySmallStronger__m4c9owm style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
            >
              title
            </span>
            <p
              class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
            >
              Sample Alert
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`alert > renders correctly with all sentiments > renders correctly sentiment 'danger' 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1b838gx0 styles_sentiment_danger__1b838gx1 styles_size_medium__1b838gx6 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__1b838gx8 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
          style="--_4k0ekn3: 1 1 auto;"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzf uv_icons_1sbwqkz1k"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10ZM10 5C10.4142 5 10.75 5.33579 10.75 5.75V10.25C10.75 10.6642 10.4142 11 10 11C9.58579 11 9.25 10.6642 9.25 10.25V5.75C9.25 5.33579 9.58579 5 10 5ZM10 15C10.5523 15 11 14.5523 11 14C11 13.4477 10.5523 13 10 13C9.44771 13 9 13.4477 9 14C9 14.5523 9.44771 15 10 15Z"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="styles__1b838gx9 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_0.5rem_xxsmall__toi52u3p"
            style="--_4k0ekn3: 1 1 auto;"
          >
            <p
              class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
            >
              Sample Alert
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`alert > renders correctly with all sentiments > renders correctly sentiment 'info' 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1b838gx0 styles_sentiment_info__1b838gx2 styles_size_medium__1b838gx6 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__1b838gx8 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
          style="--_4k0ekn3: 1 1 auto;"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzd uv_icons_1sbwqkzf uv_icons_1sbwqkz1m"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <title>
              InformationIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10ZM11 6C11 6.55228 10.5523 7 10 7C9.44771 7 9 6.55228 9 6C9 5.44772 9.44771 5 10 5C10.5523 5 11 5.44772 11 6ZM9 9C8.58579 9 8.25 9.33579 8.25 9.75C8.25 10.1642 8.58579 10.5 9 10.5H9.25338C9.41332 10.5 9.53213 10.6481 9.49743 10.8042L9.03829 12.8704C8.79542 13.9633 9.62706 15 10.7466 15H11C11.4142 15 11.75 14.6642 11.75 14.25C11.75 13.8358 11.4142 13.5 11 13.5H10.7466C10.5867 13.5 10.4679 13.3519 10.5026 13.1958L10.9617 11.1296C11.2046 10.0367 10.3729 9 9.25338 9H9Z"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="styles__1b838gx9 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_0.5rem_xxsmall__toi52u3p"
            style="--_4k0ekn3: 1 1 auto;"
          >
            <p
              class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
            >
              Sample Alert
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`alert > renders correctly with all sentiments > renders correctly sentiment 'neutral' 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1b838gx0 styles_sentiment_neutral__1b838gx3 styles_size_medium__1b838gx6 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__1b838gx8 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
          style="--_4k0ekn3: 1 1 auto;"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz4 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1q"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <title>
              LightBulbIcon
            </title>
            <path
              d="M9.6 1a6.6 6.6 0 0 0-3.308 12.312c.548.319.892.807.907 1.298a.6.6 0 0 0 .462.565q.422.1.859.156a.43.43 0 0 0 .48-.435v-3.729a5.4 5.4 0 0 1-.75-.137.6.6 0 1 1 .3-1.162 4.2 4.2 0 0 0 2.1 0 .6.6 0 0 1 .3 1.162 5.4 5.4 0 0 1-.75.137v3.729a.43.43 0 0 0 .48.435q.438-.056.859-.156A.6.6 0 0 0 12 14.61c.015-.491.359-.98.907-1.298A6.6 6.6 0 0 0 9.6 1"
            />
            <path
              clip-rule="evenodd"
              d="M7.21 16.32a.6.6 0 0 1 .702-.478 9 9 0 0 0 3.376 0 .6.6 0 0 1 .224 1.179 10.3 10.3 0 0 1-3.824 0 .6.6 0 0 1-.477-.701m.592 1.955a.6.6 0 0 1 .66-.534 11 11 0 0 0 2.275 0 .6.6 0 1 1 .124 1.193 12 12 0 0 1-2.524 0 .6.6 0 0 1-.535-.659"
            />
          </svg>
          <div
            class="styles__1b838gx9 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_0.5rem_xxsmall__toi52u3p"
            style="--_4k0ekn3: 1 1 auto;"
          >
            <p
              class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
            >
              Sample Alert
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`alert > renders correctly with all sentiments > renders correctly sentiment 'success' 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1b838gx0 styles_sentiment_success__1b838gx4 styles_size_medium__1b838gx6 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__1b838gx8 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
          style="--_4k0ekn3: 1 1 auto;"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkz1j"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <title>
              CheckCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M10 18C14.4183 18 18 14.4183 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18ZM13.8566 8.19113C14.1002 7.85614 14.0261 7.38708 13.6911 7.14345C13.3561 6.89982 12.8871 6.97388 12.6434 7.30887L9.15969 12.099L7.28033 10.2197C6.98744 9.92678 6.51256 9.92678 6.21967 10.2197C5.92678 10.5126 5.92678 10.9874 6.21967 11.2803L8.71967 13.7803C8.87477 13.9354 9.08999 14.0149 9.30867 13.9977C9.52734 13.9805 9.72754 13.8685 9.85655 13.6911L13.8566 8.19113Z"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="styles__1b838gx9 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_0.5rem_xxsmall__toi52u3p"
            style="--_4k0ekn3: 1 1 auto;"
          >
            <p
              class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
            >
              Sample Alert
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`alert > renders correctly with all sentiments > renders correctly sentiment 'warning' 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1b838gx0 styles_sentiment_warning__1b838gx5 styles_size_medium__1b838gx6 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__1b838gx8 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
          style="--_4k0ekn3: 1 1 auto;"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzc uv_icons_1sbwqkzf uv_icons_1sbwqkz1l"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10ZM10 5C10.4142 5 10.75 5.33579 10.75 5.75V10.25C10.75 10.6642 10.4142 11 10 11C9.58579 11 9.25 10.6642 9.25 10.25V5.75C9.25 5.33579 9.58579 5 10 5ZM10 15C10.5523 15 11 14.5523 11 14C11 13.4477 10.5523 13 10 13C9.44771 13 9 13.4477 9 14C9 14.5523 9.44771 15 10 15Z"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="styles__1b838gx9 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_0.5rem_xxsmall__toi52u3p"
            style="--_4k0ekn3: 1 1 auto;"
          >
            <p
              class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
            >
              Sample Alert
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`alert > renders correctly with buttonText and onClickButton 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1b838gx0 styles_sentiment_danger__1b838gx1 styles_size_medium__1b838gx6 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__1b838gx8 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
          style="--_4k0ekn3: 1 1 auto;"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzf uv_icons_1sbwqkz1k"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10ZM10 5C10.4142 5 10.75 5.33579 10.75 5.75V10.25C10.75 10.6642 10.4142 11 10 11C9.58579 11 9.25 10.6642 9.25 10.25V5.75C9.25 5.33579 9.58579 5 10 5ZM10 15C10.5523 15 11 14.5523 11 14C11 13.4477 10.5523 13 10 13C9.44771 13 9 13.4477 9 14C9 14.5523 9.44771 15 10 15Z"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="styles__1b838gx9 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_0.5rem_xxsmall__toi52u3p"
            style="--_4k0ekn3: 1 1 auto;"
          >
            <p
              class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
            >
              Sample Alert
            </p>
          </div>
        </div>
        <button
          class="styles_medium__1b838gxa styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_danger__e1wcoe6 styles_size_small__e1wcoeg styles_variant_filled__e1wcoei styles_undefined_compound_2__e1wcoen"
          type="button"
        >
          Button
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`alert > renders correctly with children as component 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1b838gx0 styles_sentiment_danger__1b838gx1 styles_size_medium__1b838gx6 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__1b838gx8 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
          style="--_4k0ekn3: 1 1 auto;"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzf uv_icons_1sbwqkz1k"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10ZM10 5C10.4142 5 10.75 5.33579 10.75 5.75V10.25C10.75 10.6642 10.4142 11 10 11C9.58579 11 9.25 10.6642 9.25 10.25V5.75C9.25 5.33579 9.58579 5 10 5ZM10 15C10.5523 15 11 14.5523 11 14C11 13.4477 10.5523 13 10 13C9.44771 13 9 13.4477 9 14C9 14.5523 9.44771 15 10 15Z"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="styles__1b838gx9 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_0.5rem_xxsmall__toi52u3p"
            style="--_4k0ekn3: 1 1 auto;"
          >
            <p>
              Sample Alert
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`alert > renders correctly with closable and onClose 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1b838gx0 styles_sentiment_danger__1b838gx1 styles_size_medium__1b838gx6 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__1b838gx8 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
          style="--_4k0ekn3: 1 1 auto;"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzf uv_icons_1sbwqkz1k"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10ZM10 5C10.4142 5 10.75 5.33579 10.75 5.75V10.25C10.75 10.6642 10.4142 11 10 11C9.58579 11 9.25 10.6642 9.25 10.25V5.75C9.25 5.33579 9.58579 5 10 5ZM10 15C10.5523 15 11 14.5523 11 14C11 13.4477 10.5523 13 10 13C9.44771 13 9 13.4477 9 14C9 14.5523 9.44771 15 10 15Z"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="styles__1b838gx9 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_0.5rem_xxsmall__toi52u3p"
            style="--_4k0ekn3: 1 1 auto;"
          >
            <p
              class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
            >
              Sample Alert
            </p>
          </div>
        </div>
      </div>
      <button
        aria-label="close"
        class="styles__1b838gxc styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_danger__e1wcoe6 styles_size_xsmall__e1wcoeh styles_variant_ghost__e1wcoej styles_undefined_compound_20__e1wcoe15"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`alert > renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1b838gx0 styles_sentiment_danger__1b838gx1 styles_size_medium__1b838gx6 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__1b838gx8 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
          style="--_4k0ekn3: 1 1 auto;"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzf uv_icons_1sbwqkz1k"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10ZM10 5C10.4142 5 10.75 5.33579 10.75 5.75V10.25C10.75 10.6642 10.4142 11 10 11C9.58579 11 9.25 10.6642 9.25 10.25V5.75C9.25 5.33579 9.58579 5 10 5ZM10 15C10.5523 15 11 14.5523 11 14C11 13.4477 10.5523 13 10 13C9.44771 13 9 13.4477 9 14C9 14.5523 9.44771 15 10 15Z"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="styles__1b838gx9 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_0.5rem_xxsmall__toi52u3p"
            style="--_4k0ekn3: 1 1 auto;"
          >
            <p
              class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
            >
              Sample Alert
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`alert > renders correctly with disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1b838gx0 styles_sentiment_danger__1b838gx1 styles_size_medium__1b838gx6 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__1b838gx8 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
          style="--_4k0ekn3: 1 1 auto;"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzf uv_icons_1sbwqkz1k"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10ZM10 5C10.4142 5 10.75 5.33579 10.75 5.75V10.25C10.75 10.6642 10.4142 11 10 11C9.58579 11 9.25 10.6642 9.25 10.25V5.75C9.25 5.33579 9.58579 5 10 5ZM10 15C10.5523 15 11 14.5523 11 14C11 13.4477 10.5523 13 10 13C9.44771 13 9 13.4477 9 14C9 14.5523 9.44771 15 10 15Z"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="styles__1b838gx9 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_0.5rem_xxsmall__toi52u3p"
            style="--_4k0ekn3: 1 1 auto;"
          >
            <p
              class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
            >
              Sample Alert
            </p>
          </div>
        </div>
        <button
          class="styles_medium__1b838gxa styles__e1wcoe0 styles_disabled_true__e1wcoe2 styles_fullWidth_false__e1wcoe3 styles_sentiment_danger__e1wcoe6 styles_size_small__e1wcoeg styles_variant_filled__e1wcoei styles_undefined_compound_2__e1wcoen"
          disabled=""
          type="button"
        >
          button
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`alert > renders correctly with title 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1b838gx0 styles_sentiment_danger__1b838gx1 styles_size_medium__1b838gx6 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__1b838gx8 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
          style="--_4k0ekn3: 1 1 auto;"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzf uv_icons_1sbwqkz1k"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10ZM10 5C10.4142 5 10.75 5.33579 10.75 5.75V10.25C10.75 10.6642 10.4142 11 10 11C9.58579 11 9.25 10.6642 9.25 10.25V5.75C9.25 5.33579 9.58579 5 10 5ZM10 15C10.5523 15 11 14.5523 11 14C11 13.4477 10.5523 13 10 13C9.44771 13 9 13.4477 9 14C9 14.5523 9.44771 15 10 15Z"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="styles__1b838gx9 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u37 styles_gap_0.5rem_xxsmall__toi52u3p"
            style="--_4k0ekn3: 1 1 auto;"
          >
            <span
              class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_bodyStronger__m4c9owo style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
            >
              title
            </span>
            <p
              class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
            >
              Sample Alert
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
